<resources>
    <string name="app_name">BannerSliderSample</string>
    <string name="label_loading">This Is Empty View</string>
    <string name="label_interval">Interval: </string>
    <string name="label_indicator_size">Indicator size: </string>
    <string name="label_animate_indicators">Animate indicators: </string>
    <string name="label_hide_indicators">Hide Indicators</string>
    <string name="label_loop_slides">Loop slides: </string>
    <array name="page_indicators">
        <item>Circle</item>
        <item>Dash</item>
        <item>Round Square</item>
        <item>Square</item>
        <item>Custom</item>
    </array>
</resources>
